--- a/bricks/illustrations/package.json
+++ b/bricks/illustrations/package.json
@@ -32,6 +32,12 @@
           "{projectRoot}/deploy",
           "{projectRoot}/src/generated"
         ]
+      },
+      "build:types": {
+        "outputs": [
+          "{projectRoot}/dist-types",
+          "{projectRoot}/src/generated"
+        ]
       }
     }
   },
@@ -39,6 +45,7 @@
     "prestart": "node ./scripts/pre-build.js",
     "start": "cross-env NODE_ENV=development build-next-bricks --watch",
     "prebuild": "node ./scripts/pre-build.js",
+    "prebuild:types": "node ./scripts/pre-build.js",
     "build": "npm run build:main && npm run build:types",
     "build:main": "cross-env NODE_ENV=production build-next-bricks",
     "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json",
