--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "serve": "brick-container-serve",
     "serve:size-check": "brick-container-serve --no-remote --size-check",
     "serve:playground": "brick-playground-serve",
-    "build": "lerna run build",
-    "build:gh": "node scripts/build-gh.mjs",
+    "start": "lerna run start",
+    "build": "npm run build:shared && npm run build:bricks",
+    "build:shared": "lerna run build --scope '@next-shared/*'",
+    "build:bricks": "npm run build:bricks:types && npm run build:bricks:main",
+    "build:bricks:types": "lerna run build:types --scope '@next-bricks/*'",
+    "build:bricks:main": "lerna run build:main --scope '@next-bricks/*'",
     "test": "test-next-project",
     "test:ci": "lerna run test:ci --",
     "cypress:open": "cypress open",
