chore(): ignore docs for internal bricks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
     - name: Compress artifacts
       run: |
         shopt -s globstar
-        tar --exclude='*.map' --exclude='bricks/v2-adapter' -cvf bricks.tar bricks/*/dist bricks/*/docs bricks/*/src/**/example.yaml bricks/*/src/**/example.html netlify.toml
+        tar --exclude='*.map' --exclude='bricks/v2-adapter' --exclude='bricks/ui-test' --exclude='bricks/vb-experiment' --exclude='bricks/form-renderer' -cvf bricks.tar bricks/*/dist bricks/*/docs bricks/*/src/**/example.yaml bricks/*/src/**/example.html netlify.toml
 
     - uses: actions/upload-artifact@v3
       with:
