--- a/bricks/nav/package.json
+++ b/bricks/nav/package.json
@@ -46,6 +46,7 @@
     "@next-core/runtime": "^1.25.4",
     "@next-core/theme": "^1.4.1",
     "@next-core/types": "^1.7.1",
+    "@next-core/utils": "^1.6.2",
     "@next-shared/general": "^0.8.0",
     "classnames": "^2.3.2",
     "hotkeys-js": "^3.10.1",
