--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -3,10 +3,10 @@
     "declaration": false,
     "sourceMap": true,
     "importHelpers": true,
-    "moduleResolution": "node16",
+    "moduleResolution": "Bundler",
     "esModuleInterop": true,
     "target": "ESNext",
-    "module": "node16",
+    "module": "ESNext",
     "skipLibCheck": true,
     "strict": true,
     "jsx": "preserve"
