--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -38,8 +38,8 @@
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
-    "@next-bricks/basic": "^0.46.2",
-    "@next-bricks/icons": "^0.6.16",
+    "@next-bricks/basic": "*",
+    "@next-bricks/icons": "*",
     "@next-core/element": "^1.1.6",
     "@next-core/http": "^1.1.5",
     "@next-core/react-element": "^1.0.16",
