--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "@next-api-sdk/user-service-sdk": "^1.2.1",
-    "@next-bricks/icons": "^0.6.16",
+    "@next-bricks/icons": "*",
     "@next-core/element": "^1.1.6",
     "@next-core/http": "^1.1.5",
     "@next-core/i18n": "^1.0.30",
