--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -34,7 +34,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/icons": "^0.6.16",
+    "@next-bricks/icons": "*",
     "@next-core/element": "^1.1.6",
     "@next-core/i18n": "^1.0.30",
     "@next-core/react-element": "^1.0.16",
