--- a/bricks/form-platform/package.json
+++ b/bricks/form-platform/package.json
@@ -34,7 +34,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/form": "^0.25.4",
+    "@next-bricks/form": "*",
     "@next-core/element": "^1.1.6",
     "@next-core/i18n": "^1.0.30",
     "@next-core/react-element": "^1.0.16",
