--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -35,9 +35,9 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.0",
-    "@next-bricks/containers": "^0.23.0",
-    "@next-bricks/icons": "^0.6.16",
-    "@next-bricks/illustrations": "^0.1.35",
+    "@next-bricks/containers": "*",
+    "@next-bricks/icons": "*",
+    "@next-bricks/illustrations": "*",
     "@next-core/element": "^1.1.6",
     "@next-core/http": "^1.1.5",
     "@next-core/react-element": "^1.0.16",
