--- a/bricks/presentational/package.json
+++ b/bricks/presentational/package.json
@@ -34,9 +34,9 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/basic": "^0.46.2",
-    "@next-bricks/containers": "^0.23.0",
-    "@next-bricks/icons": "^0.6.16",
+    "@next-bricks/basic": "*",
+    "@next-bricks/containers": "*",
+    "@next-bricks/icons": "*",
     "@next-core/element": "^1.1.6",
     "@next-core/i18n": "^1.0.30",
     "@next-core/react-element": "^1.0.16",
