--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -33,8 +33,8 @@
   },
   "dependencies": {
     "@next-api-sdk/next-builder-sdk": "^1.2.2",
-    "@next-bricks/basic": "^0.46.2",
-    "@next-bricks/icons": "^0.6.16",
+    "@next-bricks/basic": "*",
+    "@next-bricks/icons": "*",
     "@next-core/element": "^1.1.6",
     "@next-core/http": "^1.1.5",
     "@next-core/react-element": "^1.0.16",
