--- a/bricks/vs/package.json
+++ b/bricks/vs/package.json
@@ -34,7 +34,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/form": "^0.25.4",
+    "@next-bricks/form": "*",
     "@next-core/cook": "^2.2.7",
     "@next-core/element": "^1.1.6",
     "@next-core/monaco-contributions": "^0.3.3",
