--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/data-view",
-  "version": "0.24.1",
+  "version": "0.24.2",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/data-view",
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/icons": "*",
+    "@next-bricks/icons": "^0.6.17",
     "@next-core/element": "^1.1.6",
     "@next-core/i18n": "^1.0.30",
     "@next-core/react-element": "^1.0.16",
