--- a/bricks/form-platform/package.json
+++ b/bricks/form-platform/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/form-platform",
-  "version": "0.2.46",
+  "version": "0.2.47",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/form-platform",
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/form": "*",
+    "@next-bricks/form": "^0.25.5",
     "@next-core/element": "^1.1.6",
     "@next-core/i18n": "^1.0.30",
     "@next-core/react-element": "^1.0.16",
