--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/form",
-  "version": "0.25.4",
+  "version": "0.25.5",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/form",
   "repository": {
     "type": "git",
@@ -35,8 +35,8 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.0",
-    "@next-bricks/containers": "*",
-    "@next-bricks/icons": "*",
+    "@next-bricks/containers": "^0.23.1",
+    "@next-bricks/icons": "^0.6.17",
     "@next-bricks/illustrations": "*",
     "@next-core/element": "^1.1.6",
     "@next-core/http": "^1.1.5",
