--- a/bricks/nav/package.json
+++ b/bricks/nav/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/nav",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/nav",
   "repository": {
     "type": "git",
@@ -36,9 +36,9 @@
   "dependencies": {
     "@next-api-sdk/micro-app-standalone-sdk": "^1.1.1",
     "@next-api-sdk/user-service-sdk": "^1.2.1",
-    "@next-bricks/basic": "*",
-    "@next-bricks/form": "*",
-    "@next-bricks/icons": "*",
+    "@next-bricks/basic": "^0.46.3",
+    "@next-bricks/form": "^0.25.5",
+    "@next-bricks/icons": "^0.6.17",
     "@next-core/easyops-runtime": "^0.6.52",
     "@next-core/element": "^1.1.6",
     "@next-core/i18n": "^1.0.30",
