--- a/bricks/presentational/package.json
+++ b/bricks/presentational/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/presentational",
-  "version": "0.15.32",
+  "version": "0.15.33",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/presentational",
   "repository": {
     "type": "git",
@@ -34,9 +34,9 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/basic": "*",
-    "@next-bricks/containers": "*",
-    "@next-bricks/icons": "*",
+    "@next-bricks/basic": "^0.46.3",
+    "@next-bricks/containers": "^0.23.1",
+    "@next-bricks/icons": "^0.6.17",
     "@next-core/element": "^1.1.6",
     "@next-core/i18n": "^1.0.30",
     "@next-core/react-element": "^1.0.16",
