--- a/bricks/recent-history/package.json
+++ b/bricks/recent-history/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/recent-history",
-  "version": "0.1.91",
+  "version": "0.1.92",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/recent-history",
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/basic": "*",
+    "@next-bricks/basic": "^0.46.3",
     "@next-core/element": "^1.1.6",
     "@next-core/i18n": "^1.0.30",
     "@next-core/react-element": "^1.0.16",
