--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/form",
-  "version": "0.25.6",
+  "version": "0.25.7",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/form",
   "repository": {
     "type": "git",
@@ -35,9 +35,9 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.0",
-    "@next-bricks/containers": "^0.23.2",
-    "@next-bricks/icons": "^0.6.17",
-    "@next-bricks/illustrations": "*",
+    "@next-bricks/containers": "^0.23.3",
+    "@next-bricks/icons": "^0.6.18",
+    "@next-bricks/illustrations": "^0.1.36",
     "@next-core/element": "^1.1.6",
     "@next-core/http": "^1.1.5",
     "@next-core/react-element": "^1.0.16",
