--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -34,7 +34,6 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/icons": "^0.6.18",
     "@next-core/element": "^1.1.6",
     "@next-core/i18n": "^1.0.31",
     "@next-core/react-element": "^1.0.16",
@@ -51,8 +50,9 @@
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.15.1",
-    "@next-core/test-next": "^1.0.11",
-    "@types/d3-hierarchy": "^3.1.2",
-    "@types/three": "^0.150.1"
+    "@next-core/test-next": "^1.0.11"
+  },
+  "peerDependencies": {
+    "@next-bricks/icons": "^0.6.18"
   }
 }
