--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -35,9 +35,6 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.0",
-    "@next-bricks/containers": "^0.23.8",
-    "@next-bricks/icons": "^0.6.18",
-    "@next-bricks/illustrations": "^0.1.36",
     "@next-core/element": "^1.1.6",
     "@next-core/http": "^1.1.5",
     "@next-core/react-element": "^1.0.16",
@@ -59,5 +56,10 @@
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.15.1",
     "@next-core/test-next": "^1.0.11"
+  },
+  "peerDependencies": {
+    "@next-bricks/containers": "*",
+    "@next-bricks/icons": "*",
+    "@next-bricks/illustrations": "*"
   }
 }
