--- a/bricks/presentational/package.json
+++ b/bricks/presentational/package.json
@@ -34,9 +34,6 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/basic": "^0.48.0",
-    "@next-bricks/containers": "^0.23.8",
-    "@next-bricks/icons": "^0.6.18",
     "@next-core/element": "^1.1.6",
     "@next-core/i18n": "^1.0.31",
     "@next-core/react-element": "^1.0.16",
@@ -56,5 +53,10 @@
     "@next-core/build-next-bricks": "^1.15.1",
     "@next-core/test-next": "^1.0.11",
     "babel-plugin-prismjs": "^2.1.0"
+  },
+  "peerDependencies": {
+    "@next-bricks/basic": "*",
+    "@next-bricks/containers": "*",
+    "@next-bricks/icons": "*"
   }
 }
