--- a/bricks/recent-history/package.json
+++ b/bricks/recent-history/package.json
@@ -34,7 +34,6 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/basic": "^0.48.0",
     "@next-core/element": "^1.1.6",
     "@next-core/i18n": "^1.0.31",
     "@next-core/react-element": "^1.0.16",
@@ -46,5 +45,8 @@
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.15.1",
     "@next-core/test-next": "^1.0.11"
+  },
+  "peerDependencies": {
+    "@next-bricks/basic": "*"
   }
 }
