--- a/bricks/vs/package.json
+++ b/bricks/vs/package.json
@@ -34,7 +34,6 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/form": "^0.25.12",
     "@next-core/cook": "^2.2.8",
     "@next-core/element": "^1.1.6",
     "@next-core/monaco-contributions": "^0.3.3",
@@ -50,5 +49,8 @@
     "@next-core/build-next-bricks": "^1.15.1",
     "@next-core/test-next": "^1.0.11",
     "resize-observer-polyfill": "^1.5.1"
+  },
+  "peerDependencies": {
+    "@next-bricks/form": "*"
   }
 }
