--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -38,7 +38,6 @@
   },
   "dependencies": {
     "@next-api-sdk/user-service-sdk": "^1.3.0",
-    "@next-bricks/icons": "^0.6.18",
     "@next-core/element": "^1.1.6",
     "@next-core/http": "^1.1.5",
     "@next-core/i18n": "^1.0.32",
@@ -55,5 +54,8 @@
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.16.0",
     "@next-core/test-next": "^1.0.11"
+  },
+  "peerDependencies": {
+    "@next-bricks/icons": "*"
   }
 }
