--- a/bricks/nav/package.json
+++ b/bricks/nav/package.json
@@ -36,9 +36,6 @@
   "dependencies": {
     "@next-api-sdk/micro-app-standalone-sdk": "^1.1.1",
     "@next-api-sdk/user-service-sdk": "^1.3.0",
-    "@next-bricks/basic": "^0.48.1",
-    "@next-bricks/form": "^0.25.13",
-    "@next-bricks/icons": "^0.6.18",
     "@next-core/easyops-runtime": "^0.6.55",
     "@next-core/element": "^1.1.6",
     "@next-core/i18n": "^1.0.32",
@@ -58,5 +55,10 @@
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.16.0",
     "@next-core/test-next": "^1.0.11"
+  },
+  "peerDependencies": {
+    "@next-bricks/basic": "*",
+    "@next-bricks/form": "*",
+    "@next-bricks/icons": "*"
   }
 }
