--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "build:bricks": "npm run build:bricks:types && npm run build:bricks:main",
     "build:bricks:types": "lerna run build:types --scope '@next-bricks/*'",
     "build:bricks:main": "lerna run build:main --scope '@next-bricks/*'",
+    "prebuild": "pre-build-next-bricks",
+    "postbuild": "post-build-next-bricks",
     "test": "test-next-project",
     "test:ci": "lerna run test:ci --",
     "cypress:open": "cypress open",
@@ -48,6 +50,7 @@
     "@next-core/eslint-config-next": "^2.0.9",
     "@next-core/test-next": "^1.0.11",
     "@next-core/yo": "^1.5.19",
+    "@types/d3-hierarchy": "^3.1.2",
     "@types/file-saver": "^2.0.5",
     "@types/history": "^4.7.11",
     "@types/jest": "^29.5.4",
@@ -58,6 +61,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-transition-group": "^4.4.6",
+    "@types/three": "^0.150.1",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
