--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -52,7 +52,8 @@
     "react": "0.0.0-experimental-ee8509801-20230117",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "0.0.0-experimental-ee8509801-20230117"
+    "react-dom": "0.0.0-experimental-ee8509801-20230117",
+    "react-grid-layout": "^1.4.3"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.16.0",
@@ -60,6 +61,7 @@
   },
   "peerDependencies": {
     "@next-bricks/basic": "*",
+    "@next-bricks/form": "*",
     "@next-bricks/icons": "*"
   }
 }
