--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-grid-layout": "^1.3.5",
     "@types/react-transition-group": "^4.4.6",
     "@types/three": "^0.150.1",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
