--- a/.github/workflows/lerna-version.yml
+++ b/.github/workflows/lerna-version.yml
@@ -9,10 +9,10 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [20.x]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         token: ${{ secrets.GH_TOKEN_EVE }}
         fetch-depth: 0
@@ -22,9 +22,9 @@ jobs:
         git config --global user.email 'easyops-eve@users.noreply.github.com'
 
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
 
     - name: Lerna Version
-      run: npx lerna@6 version --yes
+      run: npx lerna version --yes
