--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "license": "GPL-3.0",
   "scripts": {
-    "prepare": "lerna bootstrap && husky install",
+    "prepare": "husky install",
     "serve": "brick-container-serve",
     "serve:size-check": "brick-container-serve --no-remote --size-check",
     "serve:playground": "brick-playground-serve",
@@ -53,35 +53,35 @@
     "@types/d3-hierarchy": "^3.1.2",
     "@types/file-saver": "^2.0.5",
     "@types/history": "^4.7.11",
-    "@types/jest": "^29.5.4",
+    "@types/jest": "^29.5.10",
     "@types/js-yaml": "^3.12.7",
     "@types/lodash": "^4.14.191",
-    "@types/node": "^16.18.14",
+    "@types/node": "^20.10.1",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
     "@types/react-grid-layout": "^1.3.5",
     "@types/react-transition-group": "^4.4.6",
     "@types/three": "^0.150.1",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "concurrently": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "cypress": "^12.12.0",
-    "eslint": "^8.36.0",
-    "eslint-plugin-react": "^7.32.2",
+    "cypress": "^13.6.0",
+    "eslint": "^8.54.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "lerna": "^6.5.1",
-    "lint-staged": "^13.2.0",
-    "prettier": "^3.0.3",
-    "typescript": "^5.0.2"
+    "lerna": "^8.0.0",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.1.0",
+    "typescript": "^5.2.2"
   },
   "workspaces": [
     "bricks/*",
     "shared/*"
   ],
   "resolutions": {
-    "@types/react": "^18.2.21",
+    "@types/react": "^18.2.38",
     "lodash": "^4.17.21",
     "moment": "^2.29.4"
   }
