chore(): 迁移公共依赖到新的 nav 包

--- a/shared/common-bricks/package.json
+++ b/shared/common-bricks/package.json
@@ -15,6 +15,7 @@
   "exports": {
     ".": "./common-bricks.json",
     "./common-bricks.json": "./common-bricks.json",
+    "./deprecated-bricks.json": "./deprecated-bricks.json",
     "./package.json": "./package.json"
   }
 }
