--- a/bricks/icons/package.json
+++ b/bricks/icons/package.json
@@ -53,7 +53,7 @@
     "start": "cross-env NODE_ENV=development build-next-bricks --watch",
     "prebuild": "node ./scripts/pre-build.js",
     "prebuild:types": "node ./scripts/pre-build.js",
-    "build": "npm run build:main && npm run build:types",
+    "build": "npm run build:types && npm run build:main",
     "build:main": "cross-env NODE_ENV=production build-next-bricks",
     "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json",
     "build:manifest": "cross-env NODE_ENV=production build-next-bricks --manifest-only",
@@ -71,6 +71,7 @@
     "@next-core/react-element": "^1.0.17",
     "@next-core/runtime": "^1.26.1",
     "@next-core/utils": "^1.6.5",
+    "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
@@ -78,6 +79,7 @@
     "@next-core/brick-icons": "^2.33.22",
     "@next-core/build-next-bricks": "^1.19.0",
     "@next-core/test-next": "^1.0.12",
-    "copy-webpack-plugin": "^11.0.0"
+    "copy-webpack-plugin": "^11.0.0",
+    "fast-xml-parser": "^4.3.2"
   }
 }
