--- a/bricks/nav/package.json
+++ b/bricks/nav/package.json
@@ -53,6 +53,7 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
+    "@next-api-sdk/cmdb-sdk": "^1.1.0",
     "@next-core/build-next-bricks": "^1.19.0",
     "@next-core/test-next": "^1.0.12"
   },
