chore(): refine nx cache depends

--- a/nx.json
+++ b/nx.json
@@ -50,6 +50,7 @@
     "build:main": {
       "inputs": [
         "prod",
+        "^prod",
         "global",
         "{workspaceRoot}/shared/common-bricks/common-bricks.json"
       ],
