--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "build:bricks": "npm run build:bricks:types && npm run build:bricks:main",
     "build:bricks:types": "lerna run build:types --scope '@next-bricks/*'",
     "build:bricks:main": "lerna run build:main --scope '@next-bricks/*'",
-    "prebuild": "pre-build-next-bricks",
-    "postbuild": "post-build-next-bricks",
+    "prebuild:bricks:main": "pre-build-next-bricks",
+    "postbuild:bricks:main": "post-build-next-bricks",
     "test": "test-next-project",
     "test:ci": "lerna run test:ci --",
+    "pretest:ci": "pre-build-next-bricks",
+    "posttest:ci": "post-build-next-bricks",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --record",
     "cypress:run:no-record": "cypress run",
