feat(): basic usage of eo-diagram

--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "@next-core/test-next": "^1.0.13",
     "@next-core/yo": "^1.5.32",
     "@types/d3-hierarchy": "^3.1.2",
+    "@types/d3-selection": "^3.0.10",
+    "@types/d3-shape": "^3.1.6",
+    "@types/d3-zoom": "^3.0.8",
     "@types/file-saver": "^2.0.5",
     "@types/history": "^4.7.11",
     "@types/jest": "^29.5.10",
