--- a/bricks/diagram/package.json
+++ b/bricks/diagram/package.json
@@ -34,14 +34,25 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-core/element": "^1.1.8",
+    "@dagrejs/dagre": "^1.0.4",
+    "@next-core/element": "^1.2.0",
     "@next-core/i18n": "^1.0.35",
-    "@next-core/react-element": "^1.0.18",
-    "@next-core/theme": "^1.4.6",
+    "@next-core/react-element": "^1.0.19",
+    "@next-core/react-runtime": "^1.1.44",
+    "@next-core/runtime": "^1.29.0",
+    "@next-core/theme": "^1.4.7",
+    "classnames": "^2.3.2",
+    "d3-drag": "^3.0.0",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
+    "d3-zoom": "^3.0.0",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^1.19.1",
+    "@next-core/build-next-bricks": "^1.20.0",
     "@next-core/test-next": "^1.0.13"
+  },
+  "peerDependencies": {
+    "@next-bricks/icons": "*"
   }
 }
