--- a/bricks/nav/package.json
+++ b/bricks/nav/package.json
@@ -40,6 +40,7 @@
     "@next-core/element": "^1.2.1",
     "@next-core/i18n": "^1.0.36",
     "@next-core/react-element": "^1.0.20",
+    "@next-core/react-runtime": "^1.1.45",
     "@next-core/runtime": "^1.29.1",
     "@next-core/theme": "^1.4.8",
     "@next-core/types": "^1.7.3",
