--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@next-core/eslint-config-next": "^2.0.12",
     "@next-core/test-next": "^1.0.14",
     "@next-core/yo": "^1.5.35",
+    "@types/d3-force": "^3.0.9",
     "@types/d3-hierarchy": "^3.1.2",
     "@types/d3-selection": "^3.0.10",
     "@types/d3-shape": "^3.1.6",
