--- a/bricks/diagram/package.json
+++ b/bricks/diagram/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@dagrejs/dagre": "^1.0.4",
+    "@next-api-sdk/cmdb-sdk": "^1.1.0",
     "@next-core/element": "^1.2.1",
     "@next-core/i18n": "^1.0.36",
     "@next-core/react-element": "^1.0.20",
