chore(ci): always save nx cache

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
     - name: Cache nx cache
       uses: actions/cache@v4
       with:
+        save-always: true
         path: .cache
         key: ${{ runner.os }}-nx-${{ hashFiles('yarn.lock', 'package.json', 'shared/common-bricks/common-bricks.json') }}-${{ hashFiles('**/package.json') }}
         restore-keys: |
