--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -48,6 +48,8 @@
     "@next-core/types": "^1.7.1",
     "@next-shared/general": "^0.7.2",
     "classnames": "^2.3.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
