chore(release): publish
 - @next-bricks/advanced@0.24.0
 - @next-bricks/api-market@0.1.8
 - @next-bricks/basic@1.3.3
 - @next-bricks/containers@1.0.8
 - @next-bricks/data-view@1.0.5
 - @next-bricks/diagram@0.12.1
 - @next-bricks/form@1.2.3
 - @next-bricks/form-platform@0.3.13
 - @next-bricks/form-renderer@0.1.43
 - @next-bricks/icons@1.0.8
 - @next-bricks/illustrations@1.0.5
 - @next-bricks/markdown@1.8.14
 - @next-bricks/nav@1.8.2
 - @next-bricks/presentational@1.2.2
 - @next-bricks/recent-history@1.0.6
 - @next-bricks/shoelace@1.0.6
 - @next-bricks/ui-test@1.0.6
 - @next-bricks/v2-adapter@1.0.7
 - @next-bricks/vb-experiment@1.0.5
 - @next-bricks/visual-builder@1.5.1
 - @next-bricks/vs@1.0.7
 - @next-shared/datetime@0.1.13
 - @next-shared/form@0.5.5
 - @next-shared/general@0.8.12
 - @next-shared/ui-test@1.0.8

--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/advanced",
-  "version": "0.23.1",
+  "version": "0.24.0",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/basic",
   "repository": {
     "type": "git",
@@ -47,15 +47,15 @@
     "@next-core/types": "^1.8.0",
     "antd": "^5.9.0",
     "classnames": "^2.3.2",
+    "html2canvas": "^1.4.1",
     "immutability-helper": "^3.1.1",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "0.0.0-experimental-ee8509801-20230117",
-    "react-grid-layout": "^1.4.3",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1"
+    "react-grid-layout": "^1.4.3"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.20.4",
