--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -43,6 +43,7 @@
     "@next-core/theme": "^1.4.8",
     "@next-core/types": "^1.8.0",
     "@next-shared/form": "^0.5.5",
+    "@next-shared/hooks": "^0.0.0",
     "antd": "^5.9.0",
     "classnames": "^2.3.2",
     "dayjs": "1.11.9",
