--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -34,6 +34,8 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.18.4",
+    "@ant-design/icons": "^5.3.0",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
@@ -45,7 +47,7 @@
     "@next-core/runtime": "^1.31.1",
     "@next-core/theme": "^1.4.8",
     "@next-core/types": "^1.8.0",
-    "antd": "^5.9.0",
+    "antd": "^5.14.1",
     "classnames": "^2.3.2",
     "html2canvas": "^1.4.1",
     "immutability-helper": "^3.1.1",
