feat(): contract-select

--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -54,6 +54,7 @@
   },
   "peerDependencies": {
     "@next-bricks/basic": "*",
+    "@next-bricks/form": "*",
     "@next-bricks/icons": "*"
   }
 }
