--- a/bricks/diagram/package.json
+++ b/bricks/diagram/package.json
@@ -42,6 +42,7 @@
     "@next-core/react-runtime": "^1.1.52",
     "@next-core/runtime": "^1.31.1",
     "@next-core/theme": "^1.4.8",
+    "@next-core/utils": "^1.6.10",
     "classnames": "^2.3.2",
     "d3-drag": "^3.0.0",
     "d3-force": "^3.0.0",
@@ -56,6 +57,7 @@
     "@next-core/test-next": "^1.0.15"
   },
   "peerDependencies": {
+    "@next-bricks/basic": "*",
     "@next-bricks/icons": "*"
   }
 }
