--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "jest-canvas-mock": "^2.5.2",
     "lerna": "^8.0.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.1.0",
