--- a/bricks/icons/package.json
+++ b/bricks/icons/package.json
@@ -79,6 +79,7 @@
     "@next-core/react-element": "^1.0.21",
     "@next-core/runtime": "^1.31.1",
     "@next-core/utils": "^1.6.10",
+    "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
