chore(): limit lerna concurrency to 2

--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "serve:playground": "brick-playground-serve",
     "start": "lerna run start",
     "build": "npm run build:shared && npm run build:bricks",
-    "build:shared": "lerna run build --scope '@next-shared/*'",
+    "build:shared": "lerna run build --concurrency=2 --scope '@next-shared/*'",
     "build:bricks": "npm run build:bricks:types && npm run build:bricks:main",
-    "build:bricks:types": "lerna run build:types --scope '@next-bricks/*'",
-    "build:bricks:main": "lerna run build:main --scope '@next-bricks/*'",
+    "build:bricks:types": "lerna run build:types --concurrency=2 --scope '@next-bricks/*'",
+    "build:bricks:main": "lerna run build:main --concurrency=2 --scope '@next-bricks/*'",
     "prebuild:bricks:main": "pre-build-next-bricks",
     "postbuild:bricks:main": "post-build-next-bricks",
     "test": "test-next-project",
-    "test:ci": "lerna run test:ci --",
+    "test:ci": "lerna run test:ci --concurrency=2 --",
     "pretest:ci": "pre-build-next-bricks",
     "posttest:ci": "post-build-next-bricks",
     "cypress:open": "cypress open",
