--- a/bricks/diagram/package.json
+++ b/bricks/diagram/package.json
@@ -34,6 +34,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.18.4",
     "@dagrejs/dagre": "^1.0.4",
     "@next-api-sdk/cmdb-sdk": "^1.1.0",
     "@next-core/element": "^1.2.3",
@@ -43,12 +44,14 @@
     "@next-core/runtime": "^1.31.2",
     "@next-core/theme": "^1.4.8",
     "@next-core/utils": "^1.6.11",
+    "antd": "^5.14.1",
     "classnames": "^2.3.2",
     "d3-drag": "^3.0.0",
     "d3-force": "^3.0.0",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
     "d3-zoom": "^3.0.0",
+    "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117",
     "resize-observer-polyfill": "^1.5.1"
   },
@@ -57,7 +60,6 @@
     "@next-core/test-next": "^1.0.16"
   },
   "peerDependencies": {
-    "@next-bricks/basic": "*",
-    "@next-bricks/icons": "*"
+    "@next-bricks/basic": "*"
   }
 }
