--- a/bricks/markdown/package.json
+++ b/bricks/markdown/package.json
@@ -26,6 +26,7 @@
     "start": "cross-env NODE_ENV=development build-next-bricks --watch",
     "build": "npm run build:main",
     "build:main": "cross-env NODE_ENV=production build-next-bricks",
+    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json",
     "build:manifest": "cross-env NODE_ENV=production build-next-bricks --manifest-only",
     "prepublishOnly": "cp package.json package.json.bak && npm pkg delete dependencies",
     "postpublish": "mv package.json.bak package.json"
@@ -58,5 +59,9 @@
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.20.6",
     "@next-core/test-next": "^1.0.16"
+  },
+  "peerDependencies": {
+    "@next-bricks/icons": "*",
+    "@next-bricks/form": "*"
   }
 }
