--- a/bricks/markdown/package.json
+++ b/bricks/markdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/markdown",
-  "version": "1.9.0",
+  "version": "1.10.0",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/markdown",
   "repository": {
     "type": "git",
@@ -61,7 +61,7 @@
     "@next-core/test-next": "^1.0.16"
   },
   "peerDependencies": {
-    "@next-bricks/icons": "*",
-    "@next-bricks/form": "*"
+    "@next-bricks/form": "*",
+    "@next-bricks/icons": "*"
   }
 }
