--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -40,6 +40,7 @@
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@next-core/element": "^1.2.3",
     "@next-core/http": "^1.1.10",
     "@next-core/react-element": "^1.0.22",
@@ -66,6 +67,7 @@
   "peerDependencies": {
     "@next-bricks/basic": "*",
     "@next-bricks/form": "*",
-    "@next-bricks/icons": "*"
+    "@next-bricks/icons": "*",
+    "@next-bricks/markdown": "*"
   }
 }
