--- a/bricks/containers/package.json
+++ b/bricks/containers/package.json
@@ -40,7 +40,8 @@
     "@next-core/types": "^1.9.0",
     "@next-core/utils": "^1.6.12",
     "classnames": "^2.3.2",
-    "react": "0.0.0-experimental-ee8509801-20230117"
+    "react": "0.0.0-experimental-ee8509801-20230117",
+    "react-rnd": "^10.4.1"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.20.7",
