--- a/package.json
+++ b/package.json
@@ -59,37 +59,39 @@
     "@types/d3-zoom": "^3.0.8",
     "@types/file-saver": "^2.0.5",
     "@types/history": "^4.7.11",
-    "@types/jest": "^29.5.10",
-    "@types/js-yaml": "^3.12.7",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^20.10.1",
+    "@types/jest": "^29.5.12",
+    "@types/js-yaml": "^3.12.10",
+    "@types/lodash": "^4.17.0",
+    "@types/node": "^20.12.7",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.2.38",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "@types/react-grid-layout": "^1.3.5",
     "@types/react-transition-group": "^4.4.6",
     "@types/three": "^0.150.1",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "cypress": "^13.6.0",
-    "eslint": "^8.54.0",
-    "eslint-plugin-react": "^7.33.2",
+    "cypress": "^13.7.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "jest-canvas-mock": "^2.5.2",
-    "lerna": "^8.0.0",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.1.0",
-    "typescript": "^5.2.2"
+    "lerna": "^8.1.2",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.5"
   },
   "workspaces": [
     "bricks/*",
     "shared/*"
   ],
   "resolutions": {
-    "@types/react": "^18.2.38",
+    "@babel/parser": "^7.24.4",
+    "@babel/runtime": "^7.24.4",
+    "@types/react": "^18.2.79",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4"
+    "moment": "^2.30.1"
   }
 }
