--- a/bricks/ai/package.json
+++ b/bricks/ai/package.json
@@ -36,6 +36,8 @@
     "@next-core/element": "^1.2.4",
     "@next-core/i18n": "^1.0.41",
     "@next-core/react-element": "^1.0.23",
+    "@next-core/react-runtime": "^1.4.4",
+    "@next-core/runtime": "^1.39.0",
     "@next-core/theme": "^1.5.0",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
