--- a/bricks/ai/package.json
+++ b/bricks/ai/package.json
@@ -32,6 +32,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@antv/g2": "^5.1.19",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@next-core/element": "^1.2.4",
     "@next-core/i18n": "^1.0.41",
