--- a/bricks/ai/package.json
+++ b/bricks/ai/package.json
@@ -28,6 +28,8 @@
     "build:main": "cross-env NODE_ENV=production build-next-bricks",
     "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json",
     "build:manifest": "cross-env NODE_ENV=production build-next-bricks --manifest-only",
+    "test": "cross-env NODE_ENV='test' test-next",
+    "test:ci": "cross-env NODE_ENV='test' CI=true test-next",
     "prepublishOnly": "cp package.json package.json.bak && npm pkg delete dependencies",
     "postpublish": "mv package.json.bak package.json"
   },
@@ -40,6 +42,7 @@
     "@next-core/react-runtime": "^1.4.7",
     "@next-core/runtime": "^1.41.1",
     "@next-core/theme": "^1.5.0",
+    "@next-core/utils": "^1.7.0",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
