--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -47,6 +47,7 @@
     "classnames": "^2.3.2",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
+    "micromark": "^4.0.0",
     "moment": "^2.29.4",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
