--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -49,11 +49,13 @@
     "lodash": "^4.17.21",
     "micromark": "^4.0.0",
     "moment": "^2.29.4",
+    "prismjs": "^1.29.0",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.20.9",
-    "@next-core/test-next": "^1.1.1"
+    "@next-core/test-next": "^1.1.1",
+    "babel-plugin-prismjs": "^2.1.0"
   },
   "peerDependencies": {
     "@next-bricks/basic": "*",
