--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -45,12 +45,14 @@
     "@next-core/utils": "^1.7.2",
     "@next-shared/general": "^0.8.26",
     "classnames": "^2.3.2",
+    "hast-util-to-string": "^3.0.0",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
-    "micromark": "^4.0.0",
     "moment": "^2.29.4",
-    "prismjs": "^1.29.0",
-    "react": "0.0.0-experimental-ee8509801-20230117"
+    "react": "0.0.0-experimental-ee8509801-20230117",
+    "react-remark": "^2.1.0",
+    "refractor": "^4.8.1",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.20.9",
