--- a/shared/markdown/package.json
+++ b/shared/markdown/package.json
@@ -36,8 +36,11 @@
     "hast-util-to-string": "^3.0.0",
     "prismjs": "^1.29.0",
     "react": "0.0.0-experimental-ee8509801-20230117",
-    "react-remark": "^2.1.0",
     "refractor": "^4.8.1",
+    "rehype-react": "^8.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "unified": "^11.0.4",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
