--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -38,6 +38,7 @@
     "@next-core/element": "^1.2.7",
     "@next-core/http": "^1.2.2",
     "@next-core/react-element": "^1.0.26",
+    "@next-core/react-runtime": "^1.5.0",
     "@next-core/runtime": "^1.44.0",
     "@next-core/storyboard": "^0.6.13",
     "@next-core/theme": "^1.5.0",
