--- a/.github/workflows/size-check.yml
+++ b/.github/workflows/size-check.yml
@@ -81,3 +81,8 @@ jobs:
       continue-on-error: true
 
     - run: cat size-check.log.yml
+
+    - uses: actions/upload-artifact@v4
+      with:
+        name: size-check
+        path: size-check.log.yml
