--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "license": "GPL-3.0",
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "serve": "brick-container-serve",
     "serve:size-check": "brick-container-serve --no-remote --size-check",
     "serve:playground": "brick-playground-serve",
@@ -77,11 +77,11 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "jest-canvas-mock": "^2.5.2",
-    "lerna": "^8.1.2",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
+    "lerna": "^8.1.3",
+    "lint-staged": "^15.2.5",
+    "prettier": "^3.3.1",
     "typescript": "^5.4.5"
   },
   "workspaces": [
