--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@next-bricks/advanced",
   "version": "0.33.2",
-  "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/basic",
+  "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/advanced",
   "repository": {
     "type": "git",
-    "url": "git@github.com:easyops-cn/next-bricks.git"
+    "url": "git@github.com:easyops-cn/next-bricks.git",
+    "directory": "bricks/advanced"
   },
   "license": "GPL-3.0",
   "type": "module",
