--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -4,7 +4,8 @@
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/basic",
   "repository": {
     "type": "git",
-    "url": "git@github.com:easyops-cn/next-bricks.git"
+    "url": "git@github.com:easyops-cn/next-bricks.git",
+    "directory": "bricks/basic"
   },
   "license": "GPL-3.0",
   "type": "module",
