--- a/shared/general/package.json
+++ b/shared/general/package.json
@@ -5,7 +5,8 @@
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:easyops-cn/next-bricks.git"
+    "url": "git@github.com:easyops-cn/next-bricks.git",
+    "directory": "shared/general"
   },
   "sideEffects": false,
   "type": "module",
