--- a/shared/hooks/package.json
+++ b/shared/hooks/package.json
@@ -4,7 +4,8 @@
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/shared/hooks",
   "repository": {
     "type": "git",
-    "url": "git@github.com:easyops-cn/next-bricks.git"
+    "url": "git@github.com:easyops-cn/next-bricks.git",
+    "directory": "shared/hooks"
   },
   "license": "GPL-3.0",
   "sideEffects": false,
