--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -35,6 +35,11 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.5",
+    "@formily/antd-v5": "^1.1.9",
+    "@formily/core": "^2.3.1",
+    "@formily/react": "^2.3.1",
+    "@formily/reactive": "^2.3.1",
     "@next-api-sdk/next-builder-sdk": "^1.2.2",
     "@next-core/element": "^1.2.9",
     "@next-core/http": "^1.2.4",
@@ -60,6 +65,7 @@
   "peerDependencies": {
     "@next-bricks/basic": "*",
     "@next-bricks/form": "*",
-    "@next-bricks/icons": "*"
+    "@next-bricks/icons": "*",
+    "@next-bricks/vs": "*"
   }
 }
