--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -49,6 +49,7 @@
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.12.4",
     "@next-shared/general": "^0.9.6",
+    "@next-shared/story": "^0.0.0",
     "broadcast-channel": "^7.0.0",
     "classnames": "^2.3.2",
     "dompurify": "^3.1.6",
