--- a/bricks/containers/package.json
+++ b/bricks/containers/package.json
@@ -40,6 +40,7 @@
     "@next-core/react-element": "^1.0.31",
     "@next-core/types": "^1.12.4",
     "@next-core/utils": "^1.7.23",
+    "@next-shared/story": "^0.0.0",
     "classnames": "^2.3.2",
     "react": "0.0.0-experimental-ee8509801-20230117",
     "react-rnd": "^10.4.1"
