--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -47,6 +47,7 @@
     "@next-core/types": "^1.12.4",
     "@next-shared/form": "^0.7.2",
     "@next-shared/hooks": "^0.0.11",
+    "@next-shared/story": "^0.0.0",
     "antd": "^5.19.3",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
