--- a/bricks/markdown/package.json
+++ b/bricks/markdown/package.json
@@ -52,6 +52,7 @@
     "@next-core/theme": "^1.5.4",
     "@next-shared/form": "^0.7.2",
     "@next-shared/markdown": "^0.2.1",
+    "@next-shared/story": "^0.0.0",
     "@prosemirror-adapter/react": "^0.2.2",
     "@type-config/strict": "^1.2.1",
     "react": "0.0.0-experimental-ee8509801-20230117",
